Adiciona configuração inicial do projeto com ajustes no app.json, inclusão de dependências e melhorias na estrutura do TypeScript. Atualiza o .gitignore para ignorar arquivos desnecessários e implementa tema escuro na navegação.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+node_modules
+.expo
+dist
+build
+.env
+eas.json
+*.keystore
+*.jks
+*.apk
+
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
