Atualiza as dependências do projeto, incluindo versões mais recentes de pacotes como @react-native-async-storage, react-native e react-native-safe-area-context. Adiciona configuração de typeRoots no tsconfig.json e implementa modal para exibição de fotos na tela de detalhes da atividade.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "@context/*": ["src/context/*"],
       "@components/*": ["src/components/*"],
       "@data/*": ["src/data/*"]
-    }
+    },
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   }
 }
