Atualiza o nome do aplicativo no app.json para "XVII MGEST" e remove o arquivo README.html, que continha informações desatualizadas sobre o projeto.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mgest-app",
+    "name": "XVII MGEST",
     "slug": "mgest-app",
     "version": "1.0.0",
     "orientation": "portrait",
